--- a/style.css
+++ b/style.css
@@ -98,6 +98,12 @@ header {
   cursor: pointer;
 }
 
+.btn[disabled] {
+  cursor: default;
+  background-color: gray;
+  color: lightgray;
+}
+
 button[disabled] {
   cursor: default;
   background: #c0c7cf;
